# pythonProject32

./: pyproject.toml
newapp/templates/: home.html
