[tool.poetry]
name = "я крутой ну очень крутой "
version = "0.1.0"
description = ""
authors = ["Zifirka"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
psycopg2 = "^2.9.10"
django = "^5.1.3"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.0.0"
mypy = "^1.9.0"
black = "^24.4.0"
isort = "^5.13.2"

[tool.black]
line-length = 119
exclude = '''
(
    /(
            \.eggs
        | \.git
        | \.hg
        | \.mypy_cache
        | \.tox
        | \.venv
        | dist
    )/
    | foo.py
)
'''

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"